# src/swagger.json
@@ -6,14 +6,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"ProfileType": {
-				"type": "string",
-				"enum": [
-					"stakeholder",
-					"admin",
-					"user"
-				]
-			},
 			"RecordStatus": {
 				"type": "string",
 				"enum": [
@@ -21,61 +13,28 @@
 					"inactive"
 				]
 			},
-			"AuthProfile": {
+			"AccountAttr": {
 				"properties": {
-					"remarks": {
-						"type": "string"
-					},
-					"scopes": {
-						"type": "string"
-					},
-					"status": {
-						"$ref": "#/components/schemas/RecordStatus"
-					},
-					"type": {
-						"$ref": "#/components/schemas/ProfileType"
-					},
-					"mobileNumber": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"username": {
-						"type": "string"
+					"id": {
+						"type": "number",
+						"format": "double"
 					},
 					"name": {
 						"type": "string"
 					},
-					"id": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"status",
-					"type",
-					"email",
-					"username",
-					"name",
-					"id"
-				],
-				"type": "object"
-			},
-			"AuthResult": {
-				"properties": {
-					"token": {
+					"remarks": {
 						"type": "string"
 					},
-					"profile": {
-						"$ref": "#/components/schemas/AuthProfile"
+					"status": {
+						"$ref": "#/components/schemas/RecordStatus"
 					}
 				},
 				"required": [
-					"token",
-					"profile"
+					"name",
+					"status"
 				],
-				"type": "object"
+				"type": "object",
+				"additionalProperties": false
 			},
 			"FieldError": {
 				"properties": {
@@ -134,6 +93,94 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ApiError": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"stack": {
+						"type": "string"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"message",
+					"status"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ProfileType": {
+				"type": "string",
+				"enum": [
+					"stakeholder",
+					"admin",
+					"user"
+				]
+			},
+			"AuthProfile": {
+				"properties": {
+					"remarks": {
+						"type": "string"
+					},
+					"scopes": {
+						"type": "string"
+					},
+					"status": {
+						"$ref": "#/components/schemas/RecordStatus"
+					},
+					"type": {
+						"$ref": "#/components/schemas/ProfileType"
+					},
+					"mobileNumber": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"status",
+					"type",
+					"email",
+					"username",
+					"name",
+					"id"
+				],
+				"type": "object"
+			},
+			"AuthResult": {
+				"properties": {
+					"token": {
+						"type": "string"
+					},
+					"profile": {
+						"$ref": "#/components/schemas/AuthProfile"
+					}
+				},
+				"required": [
+					"token",
+					"profile"
+				],
+				"type": "object"
+			},
 			"RegisterProfile": {
 				"properties": {
 					"mobileNumber": {
@@ -159,30 +206,6 @@
 					"name"
 				],
 				"type": "object"
-			},
-			"ApiError": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"message": {
-						"type": "string"
-					},
-					"stack": {
-						"type": "string"
-					},
-					"status": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"name",
-					"message",
-					"status"
-				],
-				"type": "object",
-				"additionalProperties": false
 			},
 			"UpdateProfile": {
 				"properties": {
@@ -272,6 +295,147 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/api/account/getAll": {
+			"get": {
+				"operationId": "GetAllAccounts",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/AccountAttr"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "search",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/account/createAccount": {
+			"post": {
+				"operationId": "CreateAccount",
+				"responses": {
+					"201": {
+						"description": "created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/AccountAttr"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "bad request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/EntityError"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/AccountAttr"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/account/updateAccount/{id}": {
+			"patch": {
+				"operationId": "UpdateAccount",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/AccountAttr"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "bad request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/EntityError"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "not found",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ApiError"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/AccountAttr"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/auth": {
 			"post": {
 				"operationId": "Auth",
